--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
   },
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jadeja-rajpal/nodetask.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jadeja-rajpal/nodetask/issues"
+  },
+  "homepage": "https://github.com/jadeja-rajpal/nodetask#readme",
   "description": ""
 }
